GNOME Bugzilla – Bug 636594
The default value of the property 'logo' in GtkAboutDialog section shouldn't be NULL, but it is
Last modified: 2014-01-25 03:44:08 UTC
Created attachment 175919 [details] Code showing the bug The default value of the property 'logo' in GtkAboutDialog section shouldn't be NULL, but it is Also reported at http://linuxtesting.org/results/report?num=D0160
You forgot to say why you think it shouldn't be NULL... fwiw, object-valued properties _always_ have a default value of NULL
But in documentation it is written that it defaults to gtk_window_get_default_icon_list().
Created attachment 176169 [details] [review] Clarify documentation of GtkAboutDialog::logo The wording is actually misleading. I suggest the wording for the setter should be used because it is not ambiguous.
Attachment 176169 [details] pushed as dcf4192 - Clarify documentation of GtkAboutDialog::logo