Clarify documentation of GtkAboutDialog::logo

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=636594